--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
       "KAMEL\\Settings\\": "src/"
     }
   },
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+
   "require": {
     "php": ">=5.6.4"
   },
