--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,10 @@
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
-  
+  "require": {
+    "php": ">=5.6.4"
 
+  },
   "extra": {
     "laravel": {
       "providers": [
