--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,10 @@
   "extra": {
     "laravel": {
       "providers": [
-        "KAMEL\\Settings\\App\\Providers\\SettingServiceProvider"
+        "KAMEL\\Settings\\app\\providers\\SettingServiceProvider"
       ],
       "aliases": {
-        "Settings": "KAMEL\\Settings\\App\\Facades\\Setting"
+        "Settings": "KAMEL\\Settings\\app\\facades\\Setting"
       }
     }
   }
